Fix footer on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -579,6 +579,12 @@ footer {
   flex-direction: row;
   justify-content: space-between;
 
+  @media (max-width: 650px) {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
+
   & .socials {
     display: flex;
     flex-direction: row;
